deployments/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-svc
  namespace: url-shortener
spec:
  selector:
    app: url-shortener
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
